[gd_scene load_steps=2 format=3 uid="uid://dvdm5xneeelae"]

[ext_resource type="Script" uid="uid://dgrbmf260nloo" path="res://src/core/ui/debug_ui.gd" id="1_dfv2e"]

[node name="DebugUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_dfv2e")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="FPSLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24

[node name="PosLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24

[node name="ChunkLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24

[node name="BiomeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
